# OnnxTest

./: CMakeLists.txt  dataDown.py  infer.cpp  mnist_cnn.pth  mnist_model.onnx  torchrum.py  train.py
